--- a/common/build.gradle
+++ b/common/build.gradle
@@ -18,7 +18,7 @@ dependencies {
      compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
      implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
 
-    compileOnly "software.bernie.geckolib:geckolib-forge-${minecraft_version}:${forge_geckolib_version}"
+    compileOnly "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${neoforge_geckolib_version}"
 }
 
 publishing {
