--- a/gradle.properties
+++ b/gradle.properties
@@ -3,35 +3,28 @@
 
 # Project
 version=0.0.1
-group=com.helliongames-hellionsmobs
+group=com.helliongames-hellionsapi
 
 # Common
-minecraft_version=1.20.4
-mod_name=Hellion's Mobs
+minecraft_version=1.21
+mod_name=Hellion's API
 mod_author=HellionGames
-mod_id=hellionsmobs
+mod_id=hellionsapi
 license=AGPL-3.0
 credits=
 description=
-minecraft_version_range=[1.20.4, 1.21)
+minecraft_version_range=[1.21, 1.22)
 
 # Fabric
-fabric_version=0.92.1+1.20.4
-fabric_loader_version=0.15.3
-fabric_geckolib_version=4.4.2
-
-# Forge
-forge_version=49.0.19
-forge_loader_version_range=[49,)
-forge_version_range=[49,)
-forge_geckolib_version=4.4.2
-forge_geckolib_version_range=[4.4.2,5)
+fabric_version=0.102.0+1.21
+fabric_loader_version=0.15.11
+fabric_geckolib_version=4.5.8
 
 # NeoForge
-neoforge_version=20.4.83-beta
+neoforge_version=21.0.167
 neoforge_loader_version_range=[2,)
-neoforge_geckolib_version=4.4.2
-neoforge_geckolib_version_range=[4.4.2,5)
+neoforge_geckolib_version=4.5.8
+neoforge_geckolib_version_range=[4.5.8,5)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
