--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@
 # Project
 version=0.0.1
 group=com.helliongames-hellionsapi
+java_version=21
 
 # Common
 minecraft_version=1.21
@@ -18,13 +19,17 @@ minecraft_version_range=[1.21, 1.22)
 # Fabric
 fabric_version=0.102.0+1.21
 fabric_loader_version=0.15.11
-fabric_geckolib_version=4.5.8
 
 # NeoForge
-neoforge_version=21.0.167
-neoforge_loader_version_range=[2,)
-neoforge_geckolib_version=4.5.8
-neoforge_geckolib_version_range=[4.5.8,5)
+neoforge_version=21.0.37-beta
+## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
+## https://projects.neoforged.net/neoforged/neoform
+neo_form_version=1.21-20240613.152323
+neoforge_loader_version_range=[4,)
+
+# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+parchment_minecraft=1.21
+parchment_version=2024.06.23
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
